--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
             <button class="btn" @click="stage = 'select'">{{ translations[language].startTest }}</button>
             
             <div class="social-links">
-                <a href="https://github.com/yourusername/cat-personality-test" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                <a href="https://www.xiaohongshu.com/" target="_blank" title="小红书"><i class="fab fa-weixin"></i></a>
-                <a href="#" @click="showHistory = !showHistory" title="历史记录"><i class="fas fa-history"></i></a>
-            </div>
+    <a href="https://github.com/forsakens0ul" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+    <a href="https://www.xiaohongshu.com/user/profile/5f3e9111000000000100b89e?xsec_token=YBPzuETgXi0DFdhOoF6T33ndGWLB1r2wMnk0_CaV4aBtE%3D&xsec_source=app_share&xhsshare=CopyLink&appuid=5f3e9111000000000100b89e&apptime=1746690135&share_id=5872be52bc044c3caab0aff4e24944eb&share_channel=copy_link" 
+       target="_blank" title="小红书"><i class="fas fa-book"></i></a>
+    <a href="#" @click="showHistory = !showHistory" title="历史记录"><i class="fas fa-history"></i></a>
+</div>
             
             <div class="language-selector">
                 <select v-model="language">
