--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         share: '晒猫族护照',
                         testAgain: '再测一次',
                         adopt: '领养真实猫咪',
-                        catShelter: 'XX猫舍',
+                        catShelter: '广告位招租',
                         version: '版本',
                         ifUseful: '如果觉得好用，请给项目点个⭐Star吧！',
                         visits: '访问量',
@@ -269,7 +269,7 @@
                         share: 'Share Result',
                         testAgain: 'Test Again',
                         adopt: 'Adopt a real cat',
-                        catShelter: 'XX Cat Shelter',
+                        catShelter: 'Advertising space for rent',
                         version: 'Version',
                         ifUseful: 'If you find it useful, please give us a ⭐Star!',
                         visits: 'Visits',
@@ -295,7 +295,7 @@
                         share: '結果をシェア',
                         testAgain: 'もう一度診断',
                         adopt: '実際の猫を迎える',
-                        catShelter: 'XX猫シェルター',
+                        catShelter: '広告所のテナント募集',
                         version: 'バージョン',
                         ifUseful: '気に入ったら⭐スターをお願いします！',
                         visits: '訪問数',
